apps/block_scout_web/assets/css/theme/_trustlines_variables.scss
// general
$primary: #0f3255;
$dark-primary: #1e8cc3;
$dark-primary-alternate: #1e8cc3;
$secondary: #f5faff;
$tertiary: #1e8cc3;

// footer
$footer-background-color: $primary;
$footer-title-color: $secondary;
$footer-text-color: $secondary;
$footer-item-disc-color: $secondary;
$footer-logo-height: 70px;
.footer-logo {
  filter: brightness(0) invert(1);
}
.footer_link {
  color: $secondary;
}

// dashboard
$dashboard-line-color-price: $tertiary; // price left border

$dashboard-banner-chart-legend-value-color: $secondary; // chart labels

$dashboard-stats-item-value-color: $secondary; // stat values

$dashboard-stats-item-border-color: $secondary; // stat border

$dashboard-banner-gradient-start: $primary; // gradient begin

$dashboard-banner-gradient-end: lighten($primary, 5); // gradient end

$dashboard-banner-network-plain-container-background-color: $tertiary; // stats bg

// navigation
$navbar-logo-width: 120px;
$navbar-logo-height: auto;

.navbar {
  box-shadow: 0px 0px 30px 0px rgba(21, 53, 80, 0.12);
} // header shadow
$header-icon-border-color-hover: $tertiary; // top border on hover
$header-icon-color-hover: $primary; // nav icon on hover
.dropdown-item:hover,
.dropdown-item:focus {
  background-color: $primary !important;
} // dropdown item on hover

.dropdown-item.active {
  background-color: $tertiary !important;
  /*
   * The important exclamation is necessary to not get overwritten by default
   * values. This comes with the downside, that the hover effect does not apply
   * for the active item anymore. It is considered as fine, since the active
   * status has precedence.
   */
}

// buttons
$btn-line-bg: $secondary; // button bg
$btn-line-color: $primary; // button border and font color && hover bg color
$btn-copy-color: $primary; // btn copy
$btn-qr-color: $primary; // btn qr-code

//links & tile
.tile a {
  color: $primary !important;
} // links color for badges
.tile-type-block {
  border-left: 4px solid $primary;
} // tab active bg

// card
$card-background-1: $primary;
$card-tab-active: $primary;

// Fix the dark mode
.dark-theme-applied {
  /*
   * Per default, the following refers to the primary color of the light mode.
   * But the dark blue as font color makes the text unreadable on the dark violet
   * background color by the dark theme. This is exactly what our secondary theme
   * color is about to solve for the light mode.
   */
  .tile a {
    color: $secondary !important;
  }
}

